<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/box_layout"
    android:layout_height="200sp">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/iv_small"
            android:layout_width="150sp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="9dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/bu_title"
            android:layout_toRightOf="@+id/iv_small"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/title"
            android:layout_toEndOf="@+id/iv_small" />
        <TextView
            android:id="@+id/bt_durations"
            android:layout_below="@id/bu_title"
            android:layout_toRightOf="@+id/iv_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/durations"
            android:layout_toEndOf="@+id/iv_small" />
        <TextView
            android:id="@+id/tv_average"
            android:layout_below="@id/bt_durations"
            android:layout_toRightOf="@+id/iv_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:text="@string/tv_average"
            android:layout_toEndOf="@+id/iv_small" />

        <TextView
            android:id="@+id/tv_directors"
            android:layout_below="@id/tv_average"
            android:layout_toRightOf="@+id/iv_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/tv_directors"
            android:layout_toEndOf="@+id/iv_small" />
        <TextView
            android:id="@+id/durations"
            android:layout_below="@id/tv_directors"
            android:layout_toRightOf="@+id/iv_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/tv_durations"
            android:layout_toEndOf="@+id/iv_small" />

        <Button
            android:id="@+id/xiangqing"
            android:layout_below="@id/durations"
            android:layout_toRightOf="@+id/iv_small"
            android:text="@string/xiangqing"
            android:layout_width="200sp"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/iv_small" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>