<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.Login_TickeyFragment">

    <ImageView
        android:id="@+id/login_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/reg_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/reg_title"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/login_newUser"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/reg_title"

                android:text="@string/login_newUser" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>



    <EditText
        android:id="@+id/login_name"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:drawableEnd="@drawable/ic_baseline_clear_24"
        android:drawableRight="@drawable/ic_baseline_clear_24"
        android:ems="10"
        android:hint="@string/login_name"
        android:textSize="15sp"

        android:textColor="#111111"
        android:textColorHint="#9D9595"
        android:background="@drawable/round_corners_bg"
        android:selectAllOnFocus="true"
        android:textScaleX="1.2"
        android:drawableLeft="@drawable/ic_baseline_phone_24"

        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61"
        android:drawableStart="@drawable/ic_baseline_phone_24" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:background="@drawable/round_corners_bg"
        android:drawableStart="@drawable/ic_baseline_domain_verification_24"
        android:drawableLeft="@drawable/ic_baseline_domain_verification_24"
        android:drawableEnd="@drawable/ic_baseline_clear_24"
        android:drawableRight="@drawable/ic_baseline_clear_24"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="numberPassword"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        android:textColorHint="#918A8A"

        android:textScaleX="1.2"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.807" />

    <Button
        android:id="@+id/login_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_login"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_constraintVertical_bias="0.037" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.yinghua.jilijili.utily.ImageWithClear
        android:id="@+id/logImage_totle"
        android:layout_width="170dp"
        android:layout_height="146dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/ic_app_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_app_title" />

    <TextView
        android:id="@+id/login_tvName"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:gravity="center"
        android:text="@string/login_tvName"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/login_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612" />

    <TextView
        android:id="@+id/login_tvPassword"

        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:gravity="center"
        android:text="@string/login_tvPassword"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/login_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.805" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <ImageButton
        android:id="@+id/login_email"
        android:layout_width="98dp"
        android:layout_height="74dp"
        android:background="@drawable/ic_app_email"
        android:scaleType="centerCrop"
        android:text="@string/login_email"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>